--- a/CoronaCases.css
+++ b/CoronaCases.css
@@ -116,8 +116,14 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .m3-container,.m3-panel{padding:0.01em 16px}.m3-panel{margin-top:16px;margin-bottom:16px}
 .m3-code,.m3-codespan{font-family:Consolas,"courier new";font-size:16px}
 .m3-code{width:auto;background-color:#fff;padding:8px 12px;border-left:4px solid #4CAF50;word-wrap:break-word}
-.m3-codespan{color:crimson;background-color:#f1f1f1;padding-left:4px;padding-right:4px;font-size:110%}
-.m3-card,.m3-card-2{box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)}
+.m3-codespan{color:crimson;background-color:#f1f1f1;padding-left:4px;padding-right:4px;font-size:110%;transition: 0.3s;}
+.m3-card,.m3-card-2{box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);box-sizing: 10;border-radius: 5px;}
+.m3-card:hover{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    transition: 0.3;
+}
+
+
 .m3-card-4,.m3-hover-shadow:hover{box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19)}
 .m3-spin{animation:m3-spin 2s infinite linear}@keyframes m3-spin{0%{transform:rotate(0deg)}100%{transform:rotate(359deg)}}
 .m3-animate-fading{animation:fading 10s infinite}@keyframes fading{0%{opacity:0}50%{opacity:1}100%{opacity:0}}
